style: updated latencySlider spacing and correct hover bx
- updated latencySlider for better fitting for case study
- removed extraneous css properties for footer
- removed extraneous useEffect and event handler for scroll event on home page
- cursor pointer active when hovering over arrow

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -56,15 +56,9 @@
 }
 
 .footer {
-  display: flex;
+  width: 99.5%;
   align-self: center;
   align-items: center;
-  width: 99.5%;
-  opacity: 92%;
-  outline: none;
-  max-height: 180px;
-  margin-top: auto;
-  bottom: 0;
   background-color: #f9f9f9;
   opacity: 92%;
   border-top-right-radius: 1.5rem; /* 24px */
@@ -72,9 +66,13 @@
   box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
 }
 
+.footer__inner {
+  display: flex;
+  width: 100%;
+}
+
 .footer__items a {
   color: #1d3370;
-  align-content: center;
 }
 
 .footer__items a:hover {
@@ -83,26 +81,17 @@
 }
 
 .footer__title {
-  padding-top:0.75rem;
   color: #1d3370;
-  font-size: 1.08rem;
-  align-self: center;
+  font-weight: 800;
+  font-size: 1.10rem;
 }
 
-/* .footer__copyright {
-  color: #1d3370;
-  font-size: 0.9rem;
-  padding-bottom: 0.5rem;
-} */
-
 .navbar {
-  display: flex;
   align-items: center;
   width: 99.5%;
   height: 50px;
   align-self: center;
   background-color: #f9f9f9;
-  margin-bottom: 0.25rem;
   opacity: 92%;
   outline: none;
   border-bottom-right-radius: 1.5rem; /* 24px */
